Feature HU 4,  and tests